Api gateway and discovery server (#9)
* api gate e disc serv

* trying adding discovery eapi gateway

* api-gateway cors e webapp

* fixed CORS settings for api geteway

* fixed date parsing

* unzip fucking works

* fixed web app

* fixed webapp

* fixed frontend

* fixed white spaces in zip file names

* handled evaluation requests when battle has not started yet more gracefully

---------

Co-authored-by: manuelamarenghi <manuela.marenghi@mail.polimi.it>